<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ru.abityrienty.vyzi.InstitutePage"
    tools:showIn="@layout/activity_institute_page">
    
    
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/inst_name"
                style="@style/institute_name"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/noteGrey"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/director"
                    android:layout_margin="24dp"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/director"
                        style="@style/brief_info_string"/>
                    <TextView
                        style="@style/brief_info_hint"
                        android:text="@string/director"/>
                </LinearLayout>
            </LinearLayout>



            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:background="@color/noteGrey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/university_phone"
                    android:layout_margin="24dp"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/phone"
                        style="@style/brief_info_string" />
                    <TextView
                        style="@style/brief_info_hint"
                        android:text="@string/phone"/>
                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:background="@color/noteGrey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/email"
                    android:layout_margin="24dp"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/email"
                        style="@style/brief_info_string"/>
                    <TextView
                        style="@style/brief_info_hint"
                        android:text="@string/e_mail"/>
                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:background="@color/noteGrey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/location"
                    android:layout_margin="24dp"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/location"
                        style="@style/brief_info_string"/>
                    <TextView
                        style="@style/brief_info_hint"
                        android:text="@string/adress"/>
                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:background="@color/noteGrey" />
            <TextView
                style="@style/subheader"
                android:text="@string/about_facultet"/>

            <TextView
                android:id="@+id/institute_text"
                style="@style/block_of_something"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    style="@style/subheader"
                    android:text="@string/directions_of_institute"/>
                <ExpandableListView
                    android:id="@+id/inst_expandable"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp">

                </ExpandableListView>

            </LinearLayout>

        </LinearLayout>

</android.support.v4.widget.NestedScrollView>
