<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ru.abityrienty.vyzi.UniversityMainActivity"
    tools:showIn="@layout/activity_university_main"
    android:id="@+id/nest"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/director"
                android:layout_margin="24dp"/>
                <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                    <TextView
                        android:id="@+id/rector"
<<<<<<< HEAD
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="16dp"
                        android:fontFamily="sans-serif"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
=======
                        style="@style/brief_info_string"/>
>>>>>>> b22333a4ff29520d1a69773a091087850f1caa13
                    <TextView
                        style="@style/brief_info_hint"
                        android:text="@string/rector"/>
                </LinearLayout>


        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:background="@color/noteGrey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/university_phone"
                android:layout_margin="24dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/phone_uni"
<<<<<<< HEAD
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:autoLink="phone"
                    android:linksClickable="true"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
=======
                    style="@style/brief_info_string" />
>>>>>>> b22333a4ff29520d1a69773a091087850f1caa13
                <TextView
                    style="@style/brief_info_hint"
                    android:text="@string/phone_of_priem"/>
            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:background="@color/noteGrey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/www"
                android:layout_margin="24dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/www_uni"
<<<<<<< HEAD
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:textColor="@color/black"
                    android:autoLink="web"
                    android:linksClickable="true"
                    android:textSize="16sp" />
=======
                    style="@style/brief_info_string" />
>>>>>>> b22333a4ff29520d1a69773a091087850f1caa13
                <TextView
                    style="@style/brief_info_hint"
                    android:text="@string/site"/>
            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:background="@color/noteGrey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/location"
                android:layout_margin="24dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/location_uni"
<<<<<<< HEAD
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:textColor="@color/black"
                    android:autoLink="map"
                    android:linksClickable="true"
                    android:textSize="16sp" />
=======
                    style="@style/brief_info_string"/>
>>>>>>> b22333a4ff29520d1a69773a091087850f1caa13
                <TextView
                    style="@style/brief_info_hint"
                    android:text="@string/adress"/>
            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:background="@color/noteGrey" />
        <TextView
            style="@style/subheader"
            android:text="@string/about_uni"/>

        <TextView
            android:id="@+id/info"
            style="@style/block_of_something"/>

        <info.hoang8f.widget.FButton
            android:background="#3F51B5"
            android:id="@+id/directions_btn"
            style="@style/btn_introduction"
            android:text="@string/btn_directions"
            fbutton:buttonColor="@color/shadow2"
            fbutton:cornerRadius="16dp"
            fbutton:shadowColor="@color/siteBack"
            fbutton:shadowHeight="5dp"/>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
